<resources>
    <string name="app_name">Wms</string>
    <string name="login">Login</string>
    <string name="appDesc">Mobile Warehouse Management System</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="copyRight">Copy Right @Bitfinity</string>
    <string name="bitfinity">\@Bitfinity</string>
    <string name="receiving">Receiving</string>
    <string name="putaway">Putaway</string>
    <string name="serialPutawayAssign">Serial Putaway Assign</string>
    <string name="serailPutaway">Serial Putaway</string>
    <string name="transfer">Transfer</string>
    <string name="picking">Picking</string>
    <string name="serialPicking">Serial Picking</string>
    <string name="shipping">Shipping</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="tools_mahdi_ahmadi">Mahdi Ahmadi</string>
    <string name="logout">LogOut</string>
    <string name="report">Report</string>
    <string name="inventory">Inventory</string>
    <string name="search">Search</string>
    <string name="tools_a220820_023535">A220820-023535</string>
    <string name="tools_mohammad">Mohammad Shahryari</string>
    <string name="tools_shahryari">Shahryari</string>
    <string name="tools_gr01">GR01</string>
    <string name="tools_tdru4204745">TDRU4204745</string>
    <string name="tools_10_08_2022_08_22">10/08/2022 08:22</string>
    <string name="tools_benz">Benz</string>
    <string name="tools_345_12">345ب12</string>
    <string name="iran">ایران</string>
    <string name="tools_79">79</string>
    <string name="tools_you_have">you have </string>
    <string name="tools_you_have_3_trcuk_to_receive"> trcuks to receive.</string>
    <string name="tools_you_have_3_cargos"> Cargos.</string>
    <string name="items">Items</string>
    <string name="tools_score_0">Score:0</string>
    <string name="pa">PA</string>
    <string name="serial_scan">Serial Scan</string>
    <string name="tools_Panel_HV36MNQ1">Panel-HV36MNQ1</string>
    <string name="tools_30203001769">3020309‎01769</string>
    <string name="tools_GoodSet">GoodSet</string>
    <string name="input_serial">Input Serial</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="serials">Serials</string>
    <string name="domainEnd">دامنه نباید به / ختم شود.</string>
    <string name="startDomain">دامنه باید با http شروع شود</string>
    <string name="tools_scannedItems">Scanned Items:</string>
    <string name="tools_total">Total: </string>
    <string name="tools_205QWZC16766">205QWZC16766</string>
    <string name="are_you_sure_for_delete">Are you sure for delete [</string>
    <string name="are_you_sure_for_delete2">] ?</string>
    <string name="ok">OK</string>
    <string name="are_you_confirm">You scan 0 serial item , are you sure for confirm?</string>
    <string name="count">Count</string>
    <string name="count1">Count 1</string>
    <string name="count_2">Count 2</string>
    <string name="count_3">Count 3</string>
    <string name="serial_scan_confirm">Serial Scan Confirm</string>
    <string name="location_code">Location Code</string>
    <string name="tools_TDRU4204745">TDRU4204745</string>
    <string name="count2">Count:</string>
    <string name="tools_10">10</string>
    <string name="a_38_26_03">A-38-26-03</string>
    <string name="product_title">Product Title</string>
    <string name="wm_m84nw">WM-M84NW</string>
    <string name="product_code">Product Code</string>
    <string name="_093210081118">093210081118</string>
    <string name="tools_6">6</string>
    <string name="Quantity">Quantity</string>
    <string name="putawayTitle">Putaway Scan Location</string>
    <string name="wrongLocation">This location is wrong please scan correct location!</string>
    <string name="tools_mohammadShahiari">Mohammad
    \n
    Shahryari</string>
    <string name="tools_WM_M84NW">WM-M84NW</string>
    <string name="gtin_product_serial_product_title">GTIN | Product Serial | Product Title</string>
    <string name="tools_S8_0123456">S8-0123456</string>
    <string name="tools_ali_ahamdi">Ali Ahamdi</string>
    <string name="tools_8B007564">8B-007564</string>
    <string name="checkTruck">Check Truck</string>
    <string name="shippingDetail">Shipping Detail</string>
    <string name="tools_GPA_MB560N">GPA-MB560N</string>
    <string name="tools_kashan">فروشگاه کاشانی</string>
    <string name="_6">6</string>
    <string name="youCanScan">You scan 0 serial item , do you sure for confirm?</string>
    <string name="ship">Ship</string>
    <string name="areYouSureConfirm">Are you sure to confirm [8B-007564]
        \n
        Shipping Number?</string>
    <string name="deny">Deny</string>
    <string name="reason">Reason</string>
    <string name="denyTruck">Deny Truck</string>
    <string name="someProblem">مشکل در اتصال</string>
    <string name="firstEnterSerial">ابتدا سریال را وارد کنید</string>
    <string name="add">Add</string>
    <string name="fillSerialEdi">please fill serial Field</string>
    <string name="fillCountEdi">please fill count field</string>
    <string name="itsDone">It\'s been done Successfully.</string>
    <string name="fillLocation">please fill location!</string>
    <string name="fillAllFields">please fill all the fields</string>
    <string name="productsToReceive">products to receive</string>
    <string name="trucksToPutAway">Trucks to Put away</string>
    <string name="tasksToPutaway">Tasks to Putaway</string>
    <string name="truckToPick">Trucks to pick</string>
    <string name="locationIsWrong">location is not correct</string>
    <string name="truckToCheck">Trucks to check</string>
    <string name="temporary">TEMP</string>
    <string name="areSureConfirm">are you sure to confirm [</string>
    <string name="shippingNumber">] Shipping Number</string>
    <string name="truckToShip">Trucks to Ship</string>
    <string name="youScan">you scan</string>
    <string name="serialItemsAre">serial items,are you sure for confirm?</string>
    <string name="are_you_sure_you_want_to_exit">Are You Sure You want to Quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="version">Version:</string>
    <string name="youCanAdd">you can add at most</string>
    <string name="canseShipping">Cancel Shipping</string>
    <string name="userDomain">User Domain</string>
    <string name="enterDomain">enter Your Domain</string>
    <string name="truckToCancelShip">Trucks to cancel Shipping</string>
    <string name="cancelShipping">Cancel Shipping</string>
    <string name="_097110478112">097110478112</string>
    <string name="gin">Gin</string>
    <string name="destinationLocation">Destination Location</string>
    <string name="destination_location">Destination Location</string>
    <string name="confirmTransfer">Confirm Transfer</string>
    <string name="sureTransfer">Are you sure to transfer [47LV35A-5B] from
        \n
        [A-01-01-1] to [B-02-02-02] ?</string>
    <string name="transferTask">Transfer Task</string>
    <string name="locationTransfer">Locatoin Transfer</string>
    <string name="print">Print</string>
    <string name="owner">Owner</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="_10_08_2022_08_22">10/08/2022 08:22</string>
    <string name="length">Length(mm)</string>
    <string name="width">Width(mm)</string>
    <string name="height">Height(mm)</string>
    <string name="weight">Weight(gr)</string>
    <string name="columnQuantity">Column Quantity</string>
    <string name="rowQuantity">Row Quantity</string>
    <string name="majid2851">Majid2851</string>
    <string name="majidbagheri">Majid Bagheri</string>
    <string name="areYouSureTransfer">Are you sure to Transfer [</string>
    <string name="from3">] from [</string>
    <string name="to3">] to [</string>
    <string name="ask">] ?</string>
    <string name="manualToTransfer">manual locations to transfer</string>
    <string name="serialToTransfer">serial locations to transfer</string>
    <string name="_0">0</string>
    <string name="pickingFinish">Picking Finish</string>
    <string name="pickingComplete">Picking Complete</string>
    <string name="checkTrucks_">] check trukcs?</string>
    <string name="from2">] from [</string>
    <string name="to2">] to [</string>
    <string name="ask2">] ?</string>
    <string name="general">General</string>
    <string name="location_inventory">Location Inventory</string>
    <string name="put_pick_daily"><![CDATA[Put&Pick Daily]]></string>
    <string name="serial_inventory">Serial Inventory</string>
    <string name="serial">Serial</string>
    <string name="scan_serial">Scan Serial</string>
    <string name="avoid_duplicate_serials">Avoid Duplicate Serials</string>
    <string name="trackingSerial">Tracking Serial</string>
    <string name="waite_for_loading">Wait For Loading</string>
    <string name="atLeast1Item">You have to fill at least 1 Item</string>
    <string name="sort">Sort</string>
    <string name="order">Order</string>
    <string name="locationCode">Location Code</string>
    <string name="DESC">DESC</string>
    <string name="ASC">ASC</string>
    <string name="pickandput"><![CDATA[Pick&Put Daily Report]]></string>
    <string name="date">Date</string>
    <string name="youHaveToDate">you have to select date!</string>
    <string name="neverMind">Cancel</string>
    <string name="offlineSerials">Offline Serials</string>
    <string name="serialsItems">Serial Items:</string>
    <string name="storeData">Store Data (XLS FILE)</string>
    <string name="areYouStore">Are you sure to store this data?</string>
    <string name="serialNumber">Serial Number</string>
    <string name="areYouSureCount">Are you sure to Count?</string>
    <string name="locationScan">Location Scan</string>
    <string name="shippingNumber2">Shipping Number</string>
    <string name="fullName">Full Name</string>
    <string name="bolNumber">BOL Number</string>
    <string name="docCode">Dock Code</string>
    <string name="dockCode">Dock Code: </string>
    <string name="invTitle">Inv Title</string>
    <string name="uomName">Uom Name</string>
    <string name="ownerCode">Owner Code</string>
    <string name="type">Type</string>
    <string name="destinationlcationcode">Destination Lcation Code</string>
    <string name="source_location_code">source Location Code</string>
    <string name="productGroup">Product Group</string>
    <string name="number">Number</string>
    <string name="containerNumber">Container Number</string>
    <string name="productWithouMaster">Product Without Master</string>
    <string name="sureConfirm">Are you sure to confirm this?</string>
    <string name="confirmShipping">confirm Shipping</string>
    <string name="confirmThisItem">Are you sure to confirm this Item?</string>
    <string name="searchKeyWord">Search Key word</string>
    <string name="setting">Setting</string>
    <string name="invType">Inv Type</string>
    <string name="row">Row:</string>
    <string name="qir">QIR:</string>
    <string name="productsAnd"> Products and </string>
    <string name="Items">Items</string>
    <string name="areYouSureConfirmShipping">Are you sure to confirm item with ProductTitle:</string>
    <string name="AreYouSureShippingNumber">Are you sure to confirm truck with ShippingNumber:</string>
    <string name="resign">انصراف</string>
    <string name="notApprovingDriver">عدم تائید راننده</string>
    <string name="notApprovingCar">عدم تائید ماشین</string>
    <string name="shippingCount">Shipping Count</string>
    <string name="InventoryType">Inventory Type</string>
    <string name="driverFullName">Driver</string>
    <string name="uomTitle">Uom Title</string>
    <string name="locationType">Location Type</string>
</resources>