<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/pickFinishHeight">

        <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/paddingSerialInfoLayout"
            android:paddingEnd="@dimen/paddingSerialInfoLayout">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title1"
                    style="@style/pattern_putaway_smallTv"
                    android:layout_alignStart="@+id/tv1"
                    android:layout_alignParentTop="true"
                    android:text="@string/shippingNumber2" />

                <TextView
                    android:id="@+id/tv1"
                    style="@style/pattern_receieve_tv1"
                    android:layout_below="@id/title1"
                    android:text="@string/tools_Panel_HV36MNQ1" />

                <TextView
                    android:id="@+id/title8"
                    style="@style/pattern_putaway_smallTv"
                    android:layout_below="@+id/tv1"
                    android:layout_alignStart="@+id/tv1"
                    android:text="@string/product_code" />

                <TextView
                    android:id="@+id/tv8"
                    style="@style/pattern_receieve_tv1"
                    android:layout_below="@id/title8"
                    android:text="@string/tools_30203001769" />


                <TextView
                    android:id="@+id/title2"
                    style="@style/pattern_putaway_smallTv"
                    android:layout_below="@+id/tv8"
                    android:layout_alignStart="@+id/tv1"
                    android:text="@string/product_title" />

                <TextView
                    android:id="@+id/tv2"
                    style="@style/pattern_receieve_tv1"
                    android:layout_width="@dimen/pattern_receive_info_width"
                    android:layout_below="@id/title2"
                    tools:text="asdasdfasfaafasfafasfasfaasfasf" />


                <TextView
                    android:id="@+id/title3"
                    style="@style/pattern_putaway_smallTv"
                    android:layout_below="@+id/tv2"
                    android:layout_alignStart="@+id/tv1"
                    android:text="@string/location_code" />

                <TextView
                    android:id="@+id/tv3"
                    style="@style/pattern_receieve_tv1"
                    android:layout_below="@+id/title3"
                    android:text="@string/tools_GoodSet" />

                <TextView
                    android:id="@+id/title4"
                    style="@style/pattern_putaway_smallTv"
                    android:layout_below="@+id/tv3"
                    android:layout_alignStart="@+id/tv1"
                    android:text="@string/ownerCode" />

                <TextView
                    android:id="@+id/ownerCode"
                    style="@style/pattern_receieve_tv1"
                    android:layout_below="@+id/title4"
                    tools:text="@string/gin" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel5"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <TextView
                    android:id="@+id/tv5"
                    style="@style/pattern_putaway_smallTv"
                    android:layout_centerHorizontal="true"
                    android:text="@string/Quantity"
                    android:textColor="@color/gray70" />


                <TextView
                    android:id="@+id/tv6"
                    android:layout_centerHorizontal="true"
                    style="@style/pattern_receieve_tv1"
                    android:layout_below="@+id/tv5"
                    android:text="@string/tools_6"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/title5"
                    style="@style/pattern_putaway_smallTv"
                    android:layout_below="@+id/tv6"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:text="@string/driverFullName" />


                <TextView
                    android:id="@+id/tv7"
                    style="@style/pattern_receieve_tv1"
                    android:layout_below="@+id/title5"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/pattern_putaway_detail_MediumFont"
                    tools:text="@string/tools_mohammadShahiari" />


            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rel1">

            <EditText
                android:id="@+id/locationCode"
                style="@style/ediForSmallDialog"
                android:layout_marginTop="@dimen/marginTop5ForLayouts"
                android:layout_marginBottom="0dp"
                android:hint="@string/reason" />

            <ImageView
                android:id="@+id/clearImgLocation"
                style="@style/imgClose"
                android:layout_marginEnd="@dimen/clearImgMarginEnd"
                android:elevation="@dimen/clearImgElevation" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel3"
            android:layout_below="@id/rel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/gion"
                style="@style/ediForSmallDialog"
                android:layout_marginTop="@dimen/marginTop5ForLayouts"
                android:hint="@string/destination_location" />

            <ImageView
                android:id="@+id/clearImg"
                android:elevation="@dimen/clearImgElevation"
                android:layout_marginEnd="@dimen/clearImgMarginEnd"
                style="@style/imgClose"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/rel3"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/quantity"
                style="@style/ediForSmallDialog"
                android:layout_marginTop="@dimen/marginTop5ForLayouts"
                android:hint="@string/Quantity" />

            <ImageView
                android:id="@+id/clearQuantity"
                android:elevation="@dimen/clearImgElevation"
                android:layout_marginEnd="@dimen/clearImgMarginEnd"
                style="@style/imgClose"/>

        </RelativeLayout>






    </RelativeLayout>
</layout>
